--- a/src/containers/Siblings.css
+++ b/src/containers/Siblings.css
@@ -3,20 +3,19 @@
   }
 
   .SiblingCard {
-  float: left;
-  margin: 1.5%;
-  background: whitesmoke;
-  width: 30%;
-  height: 500px;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    float: left;
+    margin: 1.5%;
+    background: whitesmoke;
+    width: 30%;
+    height: 500px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   }
 
-  .Sibling:hover {
+  .SiblingCard:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
 
   .SiblingImage {
-    
     height: 70%
   }
