--- a/src/containers/Users.css
+++ b/src/containers/Users.css
@@ -1,8 +1,8 @@
-  .SiblingsContainer {
+  .UsersContainer {
     padding: 16px;
   }
 
-  .SiblingCard {
+  .UserCard {
     float: left;
     margin: 1.5%;
     background: whitesmoke;
@@ -12,10 +12,10 @@
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   }
 
-  .SiblingCard:hover {
+  .UserCard:hover {
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   }
 
-  .SiblingImage {
+  .UserImage {
     height: 70%
   }
