attach proper code to login button - wip

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   color: #61dafb;
 }
 
+.NavBar {
+  display: flex;
+  flex-direction: row;
+  color: red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
