dispatch milestones, wip

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,13 @@
   color: red;
 }
 
+.Welcome {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+  color: red;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
