--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,10 @@
   color: white;
 }
 
+#loggedin {
+  font-size: 17px;
+}
+
 .App-link {
   color: #61dafb;
 }
@@ -26,7 +30,12 @@
 .NavBar {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   color: red;
+}
+
+.active {
+  color: green;
 }
 
 .Welcome {
