--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -10,6 +10,8 @@
     height: 500px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    justify-content: center;
+    transform: translate(50%,10%)
   }
 
   .UserCard:hover {
@@ -18,4 +20,8 @@
 
   .UserImage {
     height: 70%
+  }
+
+  .centered {
+    justify-content: center;
   }
