--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -2,14 +2,71 @@
     padding: 16px;
   }
 
+  .MilestoneContainer {
+    padding: 16px;
+    float: left;
+    margin: 1.5%;
+    width: 30%;
+    justify-content: center;
+    position: absolute;
+    bottom: 28px;
+    left: 28px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: green
+  }
+
+  .NiceDeedContainer {
+    padding: 16px;
+    float: center;
+    margin: 1.5%;
+    width: 30%;
+    justify-content: center;
+    position: absolute;
+    bottom: 28px;
+      left: 628px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: green
+
+  }
+
+  .KindWordContainer {
+    padding: 16px;
+    float: right;
+    margin: 1.5%;
+    width: 30%;
+    justify-content: center;
+    position: absolute;
+    bottom: 28px;
+      left: 328px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    color: green
+  }
+
   .UserCard {
     float: left;
     margin: 1.5%;
     background: whitesmoke;
-    width: 50%;
-    height: 500px;
+    width: 300px;
+    height: 400px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    justify-content: center;
+    transform: translate(50%,10%)
+  }
+
+  .MilestoneCards {
+    float: left;
+    margin: 1.5%;
+    background: whitesmoke;
+    width: 300px;
+    height: 400px;
+    
     justify-content: center;
     transform: translate(50%,10%)
   }
@@ -23,5 +80,14 @@
   }
 
   .centered {
-    justify-content: center;
+    position: absolute;
+    bottom: 28px;
+      left: 328px;
+    display: flex;
+  }
+
+  .Rightmost {
+    justify-content: right;
+    top: 28px;
+        right: 28px;
   }
