--- a/src/components/UserCard.css
+++ b/src/components/UserCard.css
@@ -66,7 +66,29 @@
     background: whitesmoke;
     width: 300px;
     height: 400px;
-    
+
+    justify-content: center;
+    transform: translate(50%,10%)
+  }
+
+  .KindWordCards {
+    float: left;
+    margin: 1.5%;
+    background: whitesmoke;
+    width: 300px;
+    height: 400px;
+
+    justify-content: center;
+    transform: translate(50%,10%)
+  }
+
+  .FormContainer {
+    float: left;
+    margin: 1.5%;
+    background: whitesmoke;
+    width: 300px;
+    height: 400px;
+
     justify-content: center;
     transform: translate(50%,10%)
   }
